# GHCP-Stats

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md
.claude/commands/: add-and-commit.md
.github/: copilot-instructions.md
.github/instructions/: documentation.instructions.md  v2-requirements.instructions.md
.github/prompts/: react-form.md  transform-app-to-react-0.md  transform-app-to-react-1.md
.github/workflows/: ci.yml
app/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/.streamlit/: config.toml
app/docs/: prompts.md
app/src/: Home.py  app.py
app/src/pages/: 1_charts.py  2_db_browser.py  _loader.py
app/src/utils/: __loader.py  auth.py  auth_wrapper.py  helpers.py  import_ghcp.py
backend/: requirements.txt
backend/app/: config.py  database.py  importer.py  main.py  schemas.py
backend/app/db/: models.py
backend/app/routers/: auth.py  metrics.py
docs/: architecture.md  configuration.md  data-architecture.md  dependencies.md  deployment.md  introduction.md  lessons_learned.md  monitoring.md  references.md  relevant prompts.md  security.md  solution-overview.md  technicals.md  timeline.md  versioning.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/pages/: Dashboard.tsx
infrastructure/: acr.bicep  build.sh  config.local.sh  defender.bicep  deploy.sh  load_secrets.sh  main.bicep  main_fastapi.bicep  parameters.acr.dev.json  parameters.main.dev.json  parameters.prod.json
infrastructure/archive/: main copy.bicep_  main.bicep
streamlit-app/: README.md  requirements.txt
streamlit-app/src/: app.py
streamlit-app/src/pages/: db_browser.py  ghcp_stat_charts.py
streamlit-app/src/utils/: helpers.py  import_ghcp.py
